--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "export": "sapper export"
   },
   "dependencies": {
-    "helmet": "^4.1.1",
     "polka": "^0.5.2",
     "shrink-ray-current": "^4.1.2",
     "sirv": "^1.0.6"
@@ -24,12 +23,16 @@
     "@rollup/plugin-commonjs": "^15.1.0",
     "@rollup/plugin-node-resolve": "^9.0.0",
     "@rollup/plugin-replace": "^2.3.3",
+    "autoprefixer": "^10.0.1",
+    "postcss": "^8.1.1",
     "rollup": "^2.29.0",
     "rollup-plugin-babel": "^4.4.0",
     "rollup-plugin-svelte": "^6.0.1",
     "rollup-plugin-terser": "^7.0.2",
     "sapper": "^0.28.10",
-    "svelte": "^3.29.0"
+    "svelte": "^3.29.0",
+    "svelte-preprocess": "^4.5.1",
+    "tailwindcss": "^1.8.12"
   },
   "optionalDependencies": {
     "node-zopfli-es": "~1.0.7"
