--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "export": "sapper export"
   },
   "dependencies": {
+    "node-zopfli-es": "~1.0.7",
     "polka": "^0.5.2",
     "shrink-ray-current": "^4.1.2",
     "sirv": "^1.0.7"
@@ -17,14 +18,14 @@
     "@rollup/plugin-commonjs": "^15.1.0",
     "@rollup/plugin-node-resolve": "^9.0.0",
     "@rollup/plugin-replace": "^2.3.3",
-    "postcss": "^8.1.1",
-    "rollup": "^2.32.0",
-    "rollup-plugin-svelte": "^6.0.1",
+    "postcss": "^8.1.2",
+    "rollup": "^2.32.1",
+    "rollup-plugin-svelte": "^6.1.0",
     "rollup-plugin-terser": "^7.0.2",
     "sapper": "^0.28.10",
     "svelte": "^3.29.0",
     "svelte-preprocess": "^4.5.1",
-    "tailwindcss": "^1.9.4"
+    "tailwindcss": "^1.9.5"
   },
   "optionalDependencies": {
     "node-zopfli-es": "~1.0.7"
