--- a/package.json
+++ b/package.json
@@ -9,25 +9,20 @@
     "export": "sapper export"
   },
   "dependencies": {
-    "node-zopfli-es": "~1.0.7",
-    "polka": "^0.5.2",
-    "shrink-ray-current": "^4.1.2",
-    "sirv": "^1.0.7"
-  },
-  "devDependencies": {
     "@rollup/plugin-commonjs": "^15.1.0",
     "@rollup/plugin-node-resolve": "^9.0.0",
     "@rollup/plugin-replace": "^2.3.3",
+    "node-zopfli-es": "~1.0.7",
+    "polka": "^0.5.2",
     "postcss": "^8.1.4",
-    "rollup": "^2.32.1",
     "rollup-plugin-svelte": "^6.1.0",
     "rollup-plugin-terser": "^7.0.2",
+    "rollup": "^2.32.1",
     "sapper": "^0.28.10",
-    "svelte": "^3.29.4",
+    "shrink-ray-current": "^4.1.2",
+    "sirv": "^1.0.7",
     "svelte-preprocess": "^4.5.2",
+    "svelte": "^3.29.4",
     "tailwindcss": "^1.9.6"
-  },
-  "optionalDependencies": {
-    "node-zopfli-es": "~1.0.7"
   }
 }
