--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "shrink-ray-current": "^4.1.2",
     "sirv": "^1.0.7",
     "svelte-preprocess": "^4.5.2",
-    "svelte": "^3.29.4",
     "tailwindcss": "^1.9.6"
+  },
+  "devDependencies": {
+    "svelte": "^3.29.4"
   }
 }
