--- a/package.json
+++ b/package.json
@@ -12,17 +12,18 @@
     "@rollup/plugin-commonjs": "^16.0.0",
     "@rollup/plugin-node-resolve": "^10.0.0",
     "@rollup/plugin-replace": "^2.3.4",
+    "autoprefixer": "^10.0.2",
     "node-zopfli-es": "~1.0.7",
     "polka": "^0.5.2",
     "postcss": "^8.1.7",
-    "rollup": "^2.33.2",
+    "rollup": "^2.33.3",
     "rollup-plugin-svelte": "^6.1.1",
     "rollup-plugin-terser": "^7.0.2",
     "sapper": "^0.28.10",
     "shrink-ray-current": "^4.1.2",
     "sirv": "^1.0.7",
     "svelte-preprocess": "^4.6.0",
-    "tailwindcss": "^1.9.6"
+    "tailwindcss": "^2.0.1"
   },
   "devDependencies": {
     "svelte": "^3.29.7"
