--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "author": "Thomas Maitret",
   "license": "ISC",
   "dependencies": {
-    "snowpack": "^3.2.2",
-    "tsparticles": "^1.24.3"
+    "@snowpack/plugin-webpack": "^2.3.1",
+    "snowpack": "^3.2.2"
   }
 }
